[package]

name = "piston_window"
version = "0.144.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["window", "piston", "game", "engine", "gamedev"]
description = "The official Piston Window for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/piston_window.git"
homepage = "https://github.com/pistondevelopers/piston_window"
documentation = "https://docs.rs/piston_window"
exclude = ["*.png", "test_assets/*"]
edition = "2024"

[lib]

path = "src/lib.rs"
name = "piston_window"


[dependencies]
futures = "0.3.31"
piston = "1.0.0"
piston2d-wgpu_graphics = "0.13.0"
piston2d-graphics = "0.45.0"
piston-texture = "0.9.0"
pistoncore-winit_window = "0.20.2"
wgpu = "27.0.1"

# Batteries
advancedresearch-nano_ecs = { version = "0.9.0", optional = true }
camera_controllers = { version = "0.36.0", optional = true }
collada = { version = "0.17.0", optional = true }
current = { version = "1.0.1", optional = true }
dyon = { version = "0.51.0", optional = true }
find_folder = { version = "0.3.0", optional = true }
gltf = { version = "1.4.1", optional = true }
hecs = { version = "0.10.5", optional = true }
kira = { version = "0.11.0", optional = true }
lyon = { version = "1.0.16", optional = true }
nalgebra = { version = "0.34.1", optional = true, default-features = false }
num = { version = "0.4.3", optional = true }
piston-ai_behavior = { version = "0.33.0", optional = true }
piston-button_controller = { version = "0.13.0", optional = true }
piston-dyon_interactive = { version = "0.50.0", optional = true }
piston_meta = { version = "2.0.0", optional = true }
piston2d-deform_grid = { version = "0.15.0", optional = true }
piston2d-drag_controller = { version = "0.30.0", optional = true }
piston2d-sprite = { version = "0.69.0", optional = true }
puzzle_design = { version = "0.2.0", optional = true }
rand = { version = "0.9.2", optional = true }
rapier2d = { version = "0.31.0", optional = true }
rapier3d = { version = "0.31.0", optional = true }
rkyv = { version = "0.8.12", optional = true }
turbine = { version = "0.3.0", optional = true }
turbine_scene3d-wgpu = { version = "0.3.0", optional = true }
underscore_args = { version = "1.0.0", optional = true }
vecmath = { version = "1.0.0", optional = true }
wavefront_obj = { version = "11.0.0", optional = true }
winit = { version = "0.30.12", optional = true }

[dependencies.image]
version = "0.25.9"
optional = true
default-features = false
features = ["png", "gif"]

[dependencies.texture_packer]
version = "0.30.0"
optional = true
default-features = false
features = ["png"]

[features]
default = []
batteries = [
  "advancedresearch-nano_ecs",
  "piston-button_controller",
  "camera_controllers",
  "collada",
  "current",
  "dyon",
  "find_folder",
  "gltf",
  "hecs",
  "image",
  "kira",
  "lyon",
  "nalgebra",
  "num",
  "piston-ai_behavior",
  "piston-dyon_interactive",
  "piston_meta",
  "piston2d-deform_grid",
  "piston2d-drag_controller",
  "piston2d-sprite",
  "puzzle_design",
  "rand",
  "rapier2d",
  "rapier3d",
  "rkyv",
  "texture_packer",
  "turbine",
  "turbine_scene3d-wgpu",
  "underscore_args",
  "vecmath",
  "wavefront_obj",
  "winit",
]
full = [
  "batteries",
  "image/default",
  "nalgebra/default",
  "texture_packer/common",
]
